[package]
name = "reticulum"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs"
categories = ["network-programming"]
keywords = ["reticulum", "mesh", "radio", "async"]

description = """
Reticulum-rs is a Rust implementation of the Reticulum Network Stack - a cryptographic, 
decentralised, and resilient mesh networking protocol designed for communication over any physical 
layer.

This project brings Reticulum's capabilities to the Rust ecosystem, enabling embedded, and 
constrained deployments with maximum performance and minimal dependencies.
"""

[dependencies]

# Protobuf and gRPC
tonic = "0.13.0"
prost = "0.13.5"

# Crypto
crypto-common = { version = "0.1.6", features = ["rand_core"] }
aes = "0.8.4"
cbc = "0.1.2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hkdf = "0.12.4"

# Hash
hmac = "0.12.1"
sha2 = "0.10.8"

# Random Number generator
rand_core = { version = "0.6.4", features = ["getrandom"] }

# Async IO
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.15"
futures = "0.3"

rmp = "0.8.14"
rmpv = "1.0"
serde = { version = "1.0.219", features = ["derive"] }

# Logging
log = "0.4.27"
env_logger = "0.10"

# Configuration and paths
dirs = "5.0"
lazy_static = "1.4"

# Serialization for persistence
rmp-serde = "1.1"

# Compression
flate2 = "1.0"
bzip2 = "0.4"

# CLI
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"

# Hex encoding (for test binaries)
hex = "0.4"

[features]
default = ["alloc"]
alloc = []
fernet-aes128 = []

[build-dependencies]
tonic-build = "0.13.0"

[[example]]
name = "tcp_server"
path = "examples/tcp_server.rs"

[[example]]
name = "tcp_client"
path = "examples/tcp_client.rs"

[[example]]
name = "udp_link"
path = "examples/udp_link.rs"

[[example]]
name = "link_client"
path = "examples/link_client.rs"

[[example]]
name = "kaonic_client"
path = "examples/kaonic_client.rs"

[[example]]
name = "testnet_client"
path = "examples/testnet_client.rs"

[[example]]
name = "kaonic_tcp_mesh"
path = "examples/kaonic_tcp_mesh.rs"

[[example]]
name = "kaonic_mesh"
path = "examples/kaonic_mesh.rs"

[[example]]
name = "multihop"
path = "examples/multihop.rs"

[[bin]]
name = "rnsd"
path = "src/bin/rnsd.rs"

[[bin]]
name = "rnstatus"
path = "src/bin/rnstatus.rs"

[[bin]]
name = "rnpath"
path = "src/bin/rnpath.rs"

[[bin]]
name = "rnid"
path = "src/bin/rnid.rs"

[[bin]]
name = "rnprobe"
path = "src/bin/rnprobe.rs"

[[bin]]
name = "test_destination"
path = "src/bin/test_destination.rs"

[[bin]]
name = "test_link_server"
path = "src/bin/test_link_server.rs"

[[bin]]
name = "test_link_client"
path = "src/bin/test_link_client.rs"

[[bin]]
name = "test_resource_server"
path = "src/bin/test_resource_server.rs"

[[bin]]
name = "test_resource_client"
path = "src/bin/test_resource_client.rs"
